docs: add documentation for Update Opening
